--- a/charts/matverseny-frontend/values.yaml
+++ b/charts/matverseny-frontend/values.yaml
@@ -68,13 +68,16 @@ resources: {}
   #   cpu: 100m
   #   memory: 128Mi
 
-# This block is for setting up the gateway api
-httpRoute:
-  enabled: true
+# This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
+ingress:
+  enabled: false
   className: ""
   annotations: {}
   hosts:
-    - '194.verseghy-gimnazium.net'
+    - host: chart-example.local
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
 
 # This is to setup the liveness and readiness probes more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
 livenessProbe:
