--- a/charts/matverseny-frontend/values.yaml
+++ b/charts/matverseny-frontend/values.yaml
@@ -45,9 +45,10 @@ securityContext:
   capabilities:
     drop:
     - ALL
-  readOnlyRootFilesystem: true
-  runAsNonRoot: true
-  runAsUser: 1000
+  # TODO: change this when https://github.com/Verseghy/matverseny-frontend/issues/15 is resolved
+  readOnlyRootFilesystem: false # true
+  runAsNonRoot: false # true
+  # runAsUser: 1000
 
 # This is for setting up a service more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/
 service:
