--- a/charts/matverseny-frontend/values.yaml
+++ b/charts/matverseny-frontend/values.yaml
@@ -55,7 +55,8 @@ service:
   # This sets the service type more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
   type: ClusterIP
   # This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
-  port: 8080
+  # TODO: change this when https://github.com/Verseghy/matverseny-frontend/issues/15 is resolved
+  port: 80
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
