--- a/charts/matverseny-frontend/values.yaml
+++ b/charts/matverseny-frontend/values.yaml
@@ -80,6 +80,10 @@ ingress:
       paths:
         - path: /
           pathType: ImplementationSpecific
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
 
 # This is to setup the liveness and readiness probes more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
 livenessProbe:
