Add update strategy and topologySpreadConstraints

--- a/charts/matverseny-frontend/templates/deployment.yaml
+++ b/charts/matverseny-frontend/templates/deployment.yaml
@@ -9,6 +9,11 @@ spec:
   selector:
     matchLabels:
       {{- include "matverseny-frontend.selectorLabels" . | nindent 6 }}
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 0
+      maxUnavailable: 1
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -63,3 +68,10 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      topologySpreadConstraints:
+        - maxSkew: 1
+          topologyKey: {{- .Values.topologySpreadConstraints.topologyKey }}
+          whenUnsatisfiable: DoNotSchedule
+          labelSelector:
+            matchLabels:
+              {{- include "matverseny-frontend.selectorLabels" . | nindent 14 }}
