--- a/charts/iam/templates/iam-migration/job.yaml
+++ b/charts/iam/templates/iam-migration/job.yaml
@@ -33,5 +33,5 @@ spec:
                 name: mysql
           env:
             - name: DATABASE_URL
-              value: mysql://root:$(MYSQL_ROOT_PASSWORD)@mysql/iam
+              value: mysql://root:$(MYSQL_ROOT_PASSWORD)@{{ include "iam-mysql.fullname" . }}/iam
       restartPolicy: OnFailure
