Mysql won't run on readonly fs, pass in job arguments properly

--- a/charts/iam/templates/iam-mysql/deployment.yaml
+++ b/charts/iam/templates/iam-mysql/deployment.yaml
@@ -32,8 +32,8 @@ spec:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: {{ include "iam-mysql.fullname" . }}
-          securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
+          # securityContext:
+          #   {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.mysql.repository }}:{{ .Values.image.mysql.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.mysql.pullPolicy }}
           ports:
