--- a/charts/iam/templates/iam-setup/job.yaml
+++ b/charts/iam/templates/iam-setup/job.yaml
@@ -35,6 +35,8 @@ spec:
           command:
             - iam-cli
             - setup
-            - "--iam $(IAM_URL)"
-            - "--database $(DATABASE_URL)"
+            - "--iam"
+            - $(IAM_URL)
+            - "--database"
+            - $(DATABASE_URL)"
       restartPolicy: OnFailure
