Pass DATABASE_SCHEMA to migration

--- a/charts/iam/templates/iam-migration/job.yaml
+++ b/charts/iam/templates/iam-migration/job.yaml
@@ -33,4 +33,6 @@ spec:
                 secretKeyRef:
                   name: iam-iam-postgres-pguser-iam
                   key: uri
+            - name: DATABASE_SCHEMA
+              value: {{ include "iam-postgres.username" }}
       restartPolicy: OnFailure
