Fix broken include

--- a/charts/iam/templates/iam-migration/job.yaml
+++ b/charts/iam/templates/iam-migration/job.yaml
@@ -34,5 +34,5 @@ spec:
                   name: iam-iam-postgres-pguser-iam
                   key: uri
             - name: DATABASE_SCHEMA
-              value: {{ include "iam-postgres.username" }}
+              value: {{ include "iam-postgres.username" . }}
       restartPolicy: OnFailure
