Add setup, migration and postgres to matverseny-backend

--- a/charts/matverseny-backend/templates/matverseny-backend-migration/serviceaccount.yaml
+++ b/charts/matverseny-backend/templates/matverseny-backend-migration/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "matverseny-backend.serviceAccountName" . }}
+  name: {{ include "matverseny-backend-migration.serviceAccountName" . }}
   labels:
-    {{- include "matverseny-backend.labels" . | nindent 4 }}
+    {{- include "matverseny-backend-migration.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
