--- a/charts/matverseny-backend/templates/matverseny-backend/serviceaccount.yaml
+++ b/charts/matverseny-backend/templates/matverseny-backend/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "iam-setup.serviceAccountName" . }}
+  name: {{ include "matverseny-backend.serviceAccountName" . }}
   labels:
-    {{- include "iam-setup.labels" . | nindent 4 }}
+    {{- include "matverseny-backend.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
@@ -12,4 +12,4 @@ metadata:
 automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
 {{- end }}
 secrets:
-  - name: iam
+  - name: matverseny-app
