--- a/charts/iam/templates/iam-migration/job.yaml
+++ b/charts/iam/templates/iam-migration/job.yaml
@@ -31,7 +31,7 @@ spec:
             - name: DATABASE_URL
               valueFrom:
                 secretKeyRef:
-                  name: matverseny-iam-iam-postgres-pguser-iam
+                  name: iam-postgres-pguser-iam
                   key: uri
             - name: DATABASE_SCHEMA
               value: {{ include "iam-postgres.username" . }}
