--- a/charts/iam/templates/iam/deployment.yaml
+++ b/charts/iam/templates/iam/deployment.yaml
@@ -58,7 +58,7 @@ spec:
             - name: DATABASE_URL
               valueFrom:
                 secretKeyRef:
-                  name: matverseny-iam-iam-postgres-pguser-iam
+                  name: iam-postgres-pguser-iam
                   key: uri
       {{- with .Values.volumes }}
       volumes:
