--- a/charts/iam/templates/iam-setup/job.yaml
+++ b/charts/iam/templates/iam-setup/job.yaml
@@ -34,7 +34,7 @@ spec:
                   name: iam-postgres-pguser-iam
                   key: uri
             - name: IAM_URL
-              value: "http://iam:{{ .Values.service.port }}"
+              value: "http://matverseny-iam:{{ .Values.service.port }}"
           command:
             - iam-cli
             - setup
