--- a/charts/matverseny-backend/values.yaml
+++ b/charts/matverseny-backend/values.yaml
@@ -77,7 +77,7 @@ ingress:
   hosts:
     - host: chart-example.local
       paths:
-        - path: /
+        - path: /v1/
           pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
@@ -99,11 +99,11 @@ resources: {}
 # This is to setup the liveness and readiness probes more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
 livenessProbe:
   httpGet:
-    path: /liveness
+    path: /livez
     port: http
 readinessProbe:
   httpGet:
-    path: /readiness
+    path: /readyz
     port: http
 
 # Additional volumes on the output Deployment definition.
