--- a/charts/matverseny/templates/matverseny-backend.yaml
+++ b/charts/matverseny/templates/matverseny-backend.yaml
@@ -9,7 +9,7 @@ spec:
   source:
     repoURL: https://verseghy.github.io/charts/
     chart: matverseny-backend
-    targetRevision: 0.1.6
+    targetRevision: 0.1.7
     helm:
       valuesObject:
         ingress:
@@ -19,7 +19,7 @@ spec:
           hosts:
             - host: api.{{ .Values.hostname }}
               paths:
-                - path: /
+                - path: /v1/
                   pathType: ImplementationSpecific
           tls:
             - hosts:
