--- a/charts/matverseny/templates/matverseny-backend.yaml
+++ b/charts/matverseny/templates/matverseny-backend.yaml
@@ -24,7 +24,7 @@ spec:
           tls:
             - hosts:
                 - api.{{ .Values.hostname }}
-              secretName: matverseny-frontend-tls
+              secretName: matverseny-backend-tls
   destination:
     server: https://kubernetes.default.svc
     namespace: {{ .Values.namespace }}
