--- a/charts/matverseny/templates/matverseny-iam.yaml
+++ b/charts/matverseny/templates/matverseny-iam.yaml
@@ -15,6 +15,7 @@ spec:
         ingress:
           annotations:
             cert-manager.io/issuer: letsencrypt-prod
+          enabled: true
           hosts:
             - host: iam.{{ .Values.hostname }}
               paths:
