--- a/charts/matverseny-backend/templates/matverseny-setup/job.yaml
+++ b/charts/matverseny-backend/templates/matverseny-setup/job.yaml
@@ -33,4 +33,6 @@ spec:
                 secretKeyRef:
                   name: iam-postgres-pguser-iam
                   key: uri
+            - name: IAM_URL
+              value: "http://matverseny-iam:3001/"
       restartPolicy: OnFailure
