--- a/charts/matverseny/templates/matverseny-frontend.yaml
+++ b/charts/matverseny/templates/matverseny-frontend.yaml
@@ -26,7 +26,7 @@ spec:
                 - {{ .Values.hostname }}
               secretName: matverseny-frontend-tls
   destination:
-    server: https://kubernetes.default.svc
+    server: verseghy-matverseny
     namespace: {{ .Values.namespace }}
   syncPolicy:
     automated: {}
