--- a/charts/matverseny/templates/matverseny-nats.yaml
+++ b/charts/matverseny/templates/matverseny-nats.yaml
@@ -17,7 +17,7 @@ spec:
         - name: config.cluster.enabled
           value: 'true'
   destination:
-    server: verseghy-matverseny
+    name: verseghy-matverseny
     namespace: {{ .Values.namespace }}
   syncPolicy:
     automated: {}
