--- a/charts/matverseny/templates/matverseny-backend.yaml
+++ b/charts/matverseny/templates/matverseny-backend.yaml
@@ -26,7 +26,7 @@ spec:
                 - api.{{ .Values.hostname }}
               secretName: matverseny-backend-tls
   destination:
-    server: verseghy-matverseny
+    name: verseghy-matverseny
     namespace: {{ .Values.namespace }}
   syncPolicy:
     automated: {}
