--- a/charts/matverseny/templates/matverseny-iam.yaml
+++ b/charts/matverseny/templates/matverseny-iam.yaml
@@ -32,3 +32,6 @@ spec:
     namespace: {{ .Values.namespace }}
   syncPolicy:
     automated: {}
+    syncOptions:
+      - CreateNamespace=true
+      - ServerSideApply=true
