--- a/charts/matverseny/templates/matverseny-frontend.yaml
+++ b/charts/matverseny/templates/matverseny-frontend.yaml
@@ -30,3 +30,6 @@ spec:
     namespace: {{ .Values.namespace }}
   syncPolicy:
     automated: {}
+    syncOptions:
+      - CreateNamespace=true
+      - ServerSideApply=true
