--- a/charts/matverseny/templates/matverseny-nats.yaml
+++ b/charts/matverseny/templates/matverseny-nats.yaml
@@ -21,3 +21,6 @@ spec:
     namespace: {{ .Values.namespace }}
   syncPolicy:
     automated: {}
+    syncOptions:
+      - CreateNamespace=true
+      - ServerSideApply=true
