--- a/kustomize/overlays/production/matverseny-admin/ingress-hostname-patch.yaml
+++ b/kustomize/overlays/production/matverseny-admin/ingress-hostname-patch.yaml
@@ -1,7 +1,7 @@
 - op: replace
   path: /spec/tls/0/hosts/0
-  value: admin.matverseny.apps.okd4.home.zoltanszepesi.com
+  value: admin.195.verseghy-gimnazium.net
 - op: replace
   path: /spec/rules/0/host
-  value: admin.matverseny.apps.okd4.home.zoltanszepesi.com
+  value: admin.195.verseghy-gimnazium.net
 
