--- a/kustomize/base/iam/migration-job.yaml
+++ b/kustomize/base/iam/migration-job.yaml
@@ -18,7 +18,7 @@ spec:
         fsGroup: 2000
       containers:
         - name: iam-migration
-          image: ghcr.io/verseghy/iam-migration:v8
+          image: ghcr.io/verseghy/iam-migration:0.0.15
           imagePullPolicy: IfNotPresent
           securityContext:
             capabilities:
