--- a/kustomize/base/matverseny-frontend/ingress.yaml
+++ b/kustomize/base/matverseny-frontend/ingress.yaml
@@ -7,6 +7,7 @@ metadata:
   labels:
     app.kubernetes.io/name: matverseny-frontend
 spec:
+  ingressClassName: nginx
   tls:
     - hosts:
         - HOSTNAME
@@ -22,4 +23,3 @@ spec:
                 name: matverseny-frontend
                 port:
                   number: 80
-
