--- a/kustomize/overlays/production/iam/kustomization.yaml
+++ b/kustomize/overlays/production/iam/kustomization.yaml
@@ -11,4 +11,8 @@ patches:
       kind: Ingress
       name: iam
     path: ingress-hostname-patch.yaml
+  - target:
+      kind: Deployment
+      name: iam
+    path: deployment-issuer-patch.yaml
 
