--- a/kustomize/base/matverseny-frontend/deployment.yaml
+++ b/kustomize/base/matverseny-frontend/deployment.yaml
@@ -24,15 +24,18 @@ spec:
         fsGroup: 2000
       containers:
         - name: matverseny-frontend
-          # TODO: change this when https://github.com/Verseghy/matverseny-frontend/issues/15 is resolved
           securityContext:
-            readOnlyRootFilesystem: false
-            runAsNonRoot: false
+            capabilities:
+              drop:
+              - ALL
+            readOnlyRootFilesystem: true
+            runAsNonRoot: true
+            runAsUser: 1000
           image: ghcr.io/verseghy/matverseny-frontend:v3
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
-              containerPort: 80
+              containerPort: 8080
               protocol: TCP
           livenessProbe:
             httpGet:
@@ -42,12 +45,6 @@ spec:
             httpGet:
               path: /
               port: http
-          volumeMounts:
-            - mountPath: /var/cache/nginx/client_temp
-              name: tmp
-      volumes:
-        - name: tmp
-          emptyDir: {}
       topologySpreadConstraints:
         - maxSkew: 1
           topologyKey: kubernetes.io/hostname
